--- a/.env
+++ b/.env
@@ -3,6 +3,6 @@
 
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
-MONGODB_URI="mongodb+srv://oshahbaz74:5VDgxbZjQroAVOZg@natourcluster.wk9acd2.mongodb.net/logindb3?retryWrites=true"
+MONGODB_URI=USE YOUR OWN URL
 
 NEXTAUTH_SECRET="NEXTAUTH_SECRET"
